objects/Academic_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year 1</fullName>
                </value>
                <value>
                    <fullName>Year 2</fullName>
                </value>
                <value>
                    <fullName>Year 3</fullName>
                </value>
                <value>
                    <fullName>Year 4</fullName>
                </value>
                <value>
                    <fullName>Year 5</fullName>
                </value>
                <value>
                    <fullName>Year 6</fullName>
                </value>
                <value>
                    <fullName>Year 7</fullName>
                </value>
                <value>
                    <fullName>Year 8</fullName>
                </value>
                <value>
                    <fullName>Year 9</fullName>
                </value>
                <value>
                    <fullName>Year 10</fullName>
                </value>
                <value>
                    <fullName>Year 11</fullName>
                </value>
                <value>
                    <fullName>Year 12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Academic Details</relationshipLabel>
        <relationshipName>Academic_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_School_Level__c</fullName>
        <description>This picklist will give the current school level in which the student is studying.</description>
        <label>Current School Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-School</fullName>
                </value>
                <value>
                    <fullName>Primary School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>ESL College</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Learning_Areas__c</fullName>
        <inlineHelpText>Student’s learning areas of need (academic or social)</inlineHelpText>
        <label>Learning Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Learning_Strengths__c</fullName>
        <inlineHelpText>Student’s learning strengths (academic or social)</inlineHelpText>
        <label>Learning Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Musical_Instrument__c</fullName>
        <inlineHelpText>Do you sing or play a musical instrument? If so, which, how long and what grades have you attained?</inlineHelpText>
        <label>Musical Instrument</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_Achievement__c</fullName>
        <inlineHelpText>Have you received an Outstanding Achievement or won an award for anything (eg Sports / Academic) over the past two years? If so, what?</inlineHelpText>
        <label>Outstanding Achievement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Name_Old__c</fullName>
        <label>School Name Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only account with record type stakeholder can be added.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Stakeholder</value>
            </filterItems>
            <infoMessage>Only account with record type stakeholder can be added.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Academic Details</relationshipLabel>
        <relationshipName>Academic_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <label>Special Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Academic Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Academic Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academic Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Academic_Year</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Current__c ==true,  ISBLANK( TEXT( Academic_Year__c ) ) ,false)</errorConditionFormula>
        <errorDisplayField>Academic_Year__c</errorDisplayField>
        <errorMessage>Academic Year is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Current__c ==FALSE &amp;&amp;  ISBLANK( End_Date__c )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>School_Name_mandatory</fullName>
        <active>true</active>
        <description>School Name is mandatory when current check-box is ticked.</description>
        <errorConditionFormula>IF( Current__c ==true, ISBLANK( School_Name__c ) , false)</errorConditionFormula>
        <errorMessage>School Name is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Current__c ==true, ISBLANK(  Start_Date__c  ) , false)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_less_than_end_date</fullName>
        <active>true</active>
        <description>When the records are saved then start date should be saved as less than end date</description>
        <errorConditionFormula>Start_Date__c &gt;= End_Date__c</errorConditionFormula>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>